# nouri-personal-ai

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  HANDOFF.md  README.md  pyproject.toml  requirements.txt
azure/: coach-api.service  nginx.conf  setup.sh
dashboard/: index.html  package-lock.json  package.json
dashboard/src/: App.tsx  index.css
dashboard/src/components/: AgentNotes.tsx  CalorieMeter.tsx  MacroBar.tsx  MealCard.tsx  ProgressRing.tsx  Skeleton.tsx  StatTile.tsx  TrendChart.tsx  WeekSummaryCard.tsx
dashboard/src/hooks/: useApi.ts
dashboard/src/pages/: History.tsx  Progress.tsx  Settings.tsx  Today.tsx
dashboard/src/styles/: globals.css
dashboard/src/types/: api.ts
memory/: memory.md
openclaw/: AGENTS.md  openclaw.json
openclaw/skills/body-metrics/: SKILL.md
openclaw/skills/daily-summary/: SKILL.md
openclaw/skills/food-log/: SKILL.md
openclaw/workspace/: SOUL.md  USER.md
scripts/: seed_history.py
src/: config.py  main.py
src/api/: history.py  meals.py  measurements.py  memory.py  progress.py  router.py  stats.py  today.py
src/models/: database.py  schemas.py
src/scheduler/: check_ins.py
src/services/: calorie_tracker.py  food_analyzer.py  measurement_tracker.py  memory_manager.py  sheets_sync.py
src/utils/: helpers.py  prompts.py
